--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\FunWithWcf.Contracts\packages.config" />
   <repository path="..\FunWithWcf.Server\packages.config" />
+  <repository path="..\FunWithWcf.Tests\packages.config" />
+  <repository path="..\FunWithWcfClient.cs\packages.config" />
 </repositories>
